# DesktopPet

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  项目结构设计.txt
assets/models/milltina/model/: milltina.gltf
assets/shaders/: pbr.frag  pbr.vert
config/: animation_state_machine.json  default_common_config.json  personalities.json  state_machine_define.json
core/: animation_manager.cpp  animation_manager.h  behavior_manager.cpp  behavior_manager.h  config_manager.cpp  config_manager.h  event_handler.cpp  event_handler.h  pet_controller.cpp  pet_controller.h
core/animation/: animation_importer.cpp  animation_importer.h  animation_manager.cpp  animation_manager.h  animation_player.cpp  animation_player.h  animation_structs.h
core/behavior/: behavior_manager.cpp
core/configLoader/: config_manager.cpp  config_manager.h
core/eventHandler/: event_handler.h
core/manager/: behavior_manager.h
core/reminder/: pet_reminder_manager.cpp  pet_reminder_manager.h
engine/: model_loader.cpp  model_loader.h  platform_utils.cpp  platform_utils.h  render_engine.cpp  render_engine.h  render_viewport.cpp  render_viewport.h  shader_manager.cpp  shader_manager.h  sound_engine.cpp  sound_engine.h
entity/: pet.cpp  pet.h  pet_personality.cpp  pet_personality.h
include/: animation_types.h  common.h  global_types.h  macros.h  material_types.h  model_types.h  pet_reminder_types.h  render_types.h
music/pyMusic/: light_music_server.py
statistic/: statistic_manager.cpp  statistic_manager.h  statistic_types.h
tests/: test_animation_importer.cpp  test_animation_player.cpp  test_pet_reminder_manager.cpp  test_statistic_manager.cpp
ui/: mainwindow.cpp  mainwindow.h  petwindow.cpp  petwindow.h  trayicon.cpp  trayicon.h
